# Nonogram

./: CMakeLists.txt  benchmark.py  conanfile.py
include/: nonogram.hpp
src/: main.cpp  nonogram.cpp  test.cpp
test_data/: _test_5.txt  test_0.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt
